--- a/New_dataset.ipynb
+++ b/New_dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -90,6 +90,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Average Jaccard coefficient\n",
+    "def mean_jaccard_coeff(in_list):\n",
+    "    all_jaccard_coeff = []\n",
+    "    for combination in itertools.combinations(in_list, 2):\n",
+    "        (pathway1, pathway2) = combination\n",
+    "        #print(pathway1, pathway2)\n",
+    "        intersect_size = len(pathway1 & pathway2)\n",
+    "        union_size = len(pathway1 | pathway2)\n",
+    "        jaccard_coeff = intersect_size / union_size\n",
+    "        all_jaccard_coeff.append(jaccard_coeff)\n",
+    "    all_jaccard_coeff = np.mean(all_jaccard_coeff)\n",
+    "    return all_jaccard_coeff"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -181,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -203,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -416,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -439,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -460,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +523,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.065572248412331488"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_jaccard_coeff(new_p2c.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_p2c = dict()\n",
+    "for pathway in dataset_paths:\n",
+    "    detectable_metabolite = pathway_2_compounds[pathway] & background_met\n",
+    "    new_p2c[pathway] = detectable_metabolite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -502,11 +571,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path:hsa04540\n",
+      "path:hsa05120\n",
+      "{'C03758', 'C00086'}\n"
+     ]
+    }
+   ],
    "source": [
     "de_metabolites = simulateDEmet(dataset_paths, 2, pathway_2_compounds, background_met, True)"
    ]
@@ -521,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -533,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -559,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -585,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -654,23 +733,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pathway_2_compounds['path:hsa05030'] & background_met"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# DE metabolites: {'C00086', 'C00037', 'C00429', 'C00187'}\n",
+      "# P-val cutoff: 0.05\n",
+      "# Significant pathways: 3\n",
+      "removed\ttp\tfp\ttn\tfn\tnonsig\tlowmet\ttested\taccu\trecall\tprecision\n",
+      "0.0655722484123\n",
+      "0\t3\t0\t29\t0\t0\t0\t32\t1.00\t1.00\t1.00\n",
+      "0.0707967738561\n",
+      "10\t3\t0\t29\t0\t0\t0\t32\t1.00\t1.00\t1.00\n",
+      "0.0759410917271\n",
+      "20\t3\t0\t29\t0\t0\t0\t32\t1.00\t1.00\t1.00\n",
+      "0.0790006363964\n",
+      "30\t2\t0\t29\t1\t1\t0\t30\t0.97\t0.67\t1.00\n",
+      "0.0819199377309\n",
+      "40\t2\t0\t29\t1\t1\t0\t30\t0.97\t0.67\t1.00\n",
+      "0.0887206261752\n",
+      "50\t2\t0\t29\t1\t1\t0\t30\t0.97\t0.67\t1.00\n",
+      "0.0991322169894\n",
+      "60\t2\t0\t29\t1\t1\t0\t30\t0.97\t0.67\t1.00\n",
+      "0.139195738518\n",
+      "70\t0\t0\t29\t3\t3\t0\t30\t0.91\t0.00\tnan\n",
+      "0.13567251462\n",
+      "80\t0\t0\t29\t3\t3\t0\t17\t0.91\t0.00\tnan\n",
+      "0.157135945815\n",
+      "90\t0\t0\t29\t3\t3\t0\t17\t0.91\t0.00\tnan\n"
+     ]
+    }
+   ],
    "source": [
     "# ORA with abundance cutoffs\n",
     "#nums_removed_metabolites = [0, 25, 50, 75]\n",
@@ -707,6 +806,14 @@
     "    for metabolite in background_met:\n",
     "        if metabolite not in removed_mets:\n",
     "            new_background.add(metabolite)\n",
+    "    # Calculate average jaccard coefficient        \n",
+    "    new_p2c = dict()\n",
+    "    for pathway in dataset_paths:\n",
+    "        detectable_metabolite = pathway_2_compounds[pathway] & new_background\n",
+    "        if len(detectable_metabolite) == 0:\n",
+    "            continue\n",
+    "        new_p2c[pathway] = detectable_metabolite\n",
+    "    print(mean_jaccard_coeff(new_p2c.values()))\n",
     "    # ORA\n",
     "    (path_pvals, path_ids, path_sizes) = ora_msc.oras_allpaths(new_de_mets, hsa_pathways, new_background,\n",
     "                                                               pathway_2_compounds, True, False, 0, [])\n",
@@ -728,7 +835,11 @@
     "    fn_nonsig = len(new_pathway_nonsig & correct_pathway_hits)\n",
     "    fn_lowmet = fn - fn_nonsig\n",
     "    accuracy = (tp + tn) / (tp + fp + fn + tn)\n",
-    "    recall = tp / (tp + fn)\n",
+    "    #recall = tp / (tp + fn)\n",
+    "    try:\n",
+    "        recall = tp / (tp + fn)\n",
+    "    except ZeroDivisionError:\n",
+    "        recall = np.NaN\n",
     "    try:\n",
     "        precision = tp /(tp + fp)\n",
     "    except ZeroDivisionError:\n",
@@ -853,15 +964,15 @@
     "#nums_removed_metabolites = [0, 25, 50, 75]\n",
     "PVAL_CUTOFF = 0.05\n",
     "#fh = open('/home/zxu/Documents/github_local/ora-msc/data/' + 'shrink.tsv', 'a')\n",
-    "fh = open('./data/' + 'shrink.tsv', 'a')\n",
+    "fh = open('./data/' + 'shrink_add.tsv', 'w')\n",
     "\n",
-    "#fh.write('\\t'.join(['# removed', 'tp', 'fp', 'tn', 'fn', 'nonsig', 'lowmet', 'tested', 'de', 'accu', 'recall', 'precision']))\n",
-    "#fh.write('\\n')\n",
-    "#fh.write('# P-val cutoff: ')\n",
-    "#fh.write(str(PVAL_CUTOFF) + '\\n')\n",
+    "fh.write('\\t'.join(['# removed', 'tp', 'fp', 'tn', 'fn', 'nonsig', 'lowmet', 'tested', 'de', 'accu', 'recall', 'jaccard']))\n",
+    "fh.write('\\n')\n",
+    "fh.write('# P-val cutoff: ')\n",
+    "fh.write(str(PVAL_CUTOFF) + '\\n')\n",
     "\n",
     "\n",
-    "for k in range(0, 80):\n",
+    "for k in range(0, 2):\n",
     "    print(k)\n",
     "    de_metabolites = simulateDEmet(dataset_paths, 2, pathway_2_compounds, background_met)\n",
     "    (path_pvals, path_ids, path_sizes) = ora_msc.oras_allpaths(set(de_metabolites), hsa_pathways, background_met,\n",
@@ -905,6 +1016,14 @@
     "            for metabolite in background_met:\n",
     "                if metabolite not in removed_mets:\n",
     "                    new_background.add(metabolite)\n",
+    "            # Calculate average jaccard coefficient        \n",
+    "            new_p2c = dict()\n",
+    "            for pathway in dataset_paths:\n",
+    "                detectable_metabolite = pathway_2_compounds[pathway] & new_background\n",
+    "                if len(detectable_metabolite) == 0:\n",
+    "                    continue\n",
+    "                new_p2c[pathway] = detectable_metabolite\n",
+    "            jcd_coeff = (mean_jaccard_coeff(new_p2c.values()))\n",
     "            # ORA\n",
     "            (path_pvals, path_ids, path_sizes) = ora_msc.oras_allpaths(new_de_mets, hsa_pathways, new_background,\n",
     "                                                                       pathway_2_compounds, True, False, 0, [])\n",
@@ -935,7 +1054,7 @@
     "            #print(len(path_ids))\n",
     "            #'\\t'.join(list(map(str, [rem, tp, fp, tn, fn])))\n",
     "            fh.write('\\t'.join(list(map(str, [rem, tp, fp, tn, fn, fn_nonsig, fn_lowmet, len(path_ids), len(new_de_mets),\n",
-    "                                              \"%.2f\" % accuracy, \"%.2f\" % recall, \"%.2f\" % precision]))))\n",
+    "                                              \"%.2f\" % accuracy, \"%.2f\" % recall, jcd_coeff]))))\n",
     "            fh.write('\\n')\n",
     "            #print('=' * 10 + str(rem) + '='* 10)\n",
     "fh.close()"
@@ -1018,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -1039,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -1047,7 +1166,7 @@
    "source": [
     "#abun_results = '/home/zxu/Documents/github_local/ora-msc/data/' + 'abundance.tsv'\n",
     "#shrink_results = '/home/zxu/Documents/github_local/ora-msc/data/' + 'shrink.tsv'\n",
-    "shrink_results = './data/' + 'shrink.tsv'"
+    "shrink_results = './data/' + 'shrink_test.tsv'"
    ]
   },
   {
@@ -1104,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -1147,13 +1266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['90', '80', '70', '60', '50', '40', '30', '20', '10', '0']\n",
+      "[0.22929408742645097, 0.16510690572995601, 0.13163344353561399, 0.10878450019942801, 0.097157186730319992, 0.087516459917420006, 0.079352738461711994, 0.073822959290174003, 0.068803217395293992, 0.065572248412300013]\n"
+     ]
+    }
+   ],
    "source": [
-    "plot_dict(accu_vs_remove)"
+    "import matplotlib.pyplot as plt\n",
+    "plot_dict(recall_vs_remove)"
    ]
   },
   {
